# what-functions-can-nns-learn

./: MLPHamming.ipynb  MLPHammingBinaryTransduction.ipynb  MLPHammingBinaryTransductionAdamW.ipynb  MLPHammingBinaryTransductionSGD.ipynb  MLPParity.ipynb  MLPParityOnBinary.ipynb  README.md  config.yaml  hello.py  pyproject.toml
Primes/: CountPrimeDivisors.py  CountPrimeDivisors_experiment_results.txt  Mobius.py  MobiusFunction_experiment_results.txt  MobiusWithProb.py  PrimeOrNot.py  PrimeOrNot_experiment_results.txt  plot.py
modular arithmetic simple NN vs transformer /: ax + b mod n varied base and n.ipynb  pytorch simple NN ax + b mod n.ipynb  pytorch simple NN.ipynb  pytorch transformer ax + b mod n.ipynb  pytorch transformer parity function.ipynb  varied_n_k_results.csv
uv/: pyvenv.cfg
wxml/: data.py  evaluate.py  hamming.py  mlp.py  model.py  numbers.py  train.py
