[project]
name = "wxml-wi25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pytest>=8.3.4",
    "toolz>=1.0.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
